fixed a bug where overflow-x would have scroll bars allthough nothing was overflowing on the popup window

--- a/src/style.css
+++ b/src/style.css
@@ -301,7 +301,8 @@ body {
 
 .vc-date__popup {
   max-height: 400px;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   padding: 10px !important;
   display: flex;
   left: 0 !important;
